--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <div class="program-container">
                 <div class="card-container">
                     <div class="card">
-                        <img src="/images/photo1.jpg" alt="">
+                        <img src="images/photo1.jpg" alt="">
                         <div class="info-container">
                             <h1>ACADEMIC TUTORIAL</h1>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="/images/fun.jpg" alt="">
+                        <img src="images/fun.jpg" alt="">
                         <div class="info-container">
                             <h1>INTERACTIVE ACTIVITY</h1>
                         </div>
