--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <title>Simple Website</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
+    <title>Four Corners Tutorial Center</title>
 </head>
 <body>
     <header>
